--- a/tutorial_TeX/RB_Partition_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_Partition_Tutorial/refs.bib
@@ -760,6 +760,16 @@ A clock-constrained Bayesian MCMC software.},
   Timestamp                = {2013.05.31}
 }
 
+@article{Brandley2005,
+  title={Partitioned Bayesian analyses, partition choice, and the phylogenetic relationships of scincid lizards},
+  author={Brandley, Matthew C and Schmitz, Andreas and Reeder, Tod W},
+  journal={Systematic biology},
+  volume={54},
+  number={3},
+  pages={373--390},
+  year={2005}
+}
+
 @Article{Britton2007,
   Title                    = {Bayesian support is larger than bootstrap support in phylogenetic inference: a mathematical argument},
   Author                   = {Britton, T. and Svennblad, B. and Erixon, P. and Oxelman, B.},
@@ -4496,6 +4506,16 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2008.12.02}
 }
 
+@article{McGuire2007,
+  title={Phylogenetic systematics and biogeography of hummingbirds: Bayesian and maximum likelihood analyses of partitioned data and selection of an appropriate partitioning strategy},
+  author={McGuire, Jimmy A and Witt, Christopher C and Altshuler, Douglas L and Remsen, JV},
+  journal={Systematic Biology},
+  volume={56},
+  number={5},
+  pages={837--856},
+  year={2007}
+}
+
 @Article{McPeek2008,
   Title                    = {The ecological dynamics of clade diversification and community assembly},
   Author                   = {McPeek, M.A.},
@@ -5060,12 +5080,21 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2011.07.11}
 }
 
+@article{Nylander2004,
+  title={Bayesian phylogenetic analysis of combined data},
+  author={Nylander, Johan AA and Ronquist, Fredrik and Huelsenbeck, John P and Nieves-Aldrey, Jos{\'e}luis},
+  journal={Systematic Biology},
+  volume={53},
+  number={1},
+  pages={47--67},
+  year={2004}
+}
+
 @Article{Nyman2012,
   Title                    = {Climate-driven diversity dynamics in plants and plant-feeding insects},
   Author                   = {Nyman, T. and Linder, H.P. and Pe{\~n}a, C. and Malm, T. and Wahlberg, N.},
   Journal                  = EL,
   Year                     = {2012},
-
   Owner                    = {hoehna},
   Publisher                = {Wiley Online Library},
   Timestamp                = {2012.08.01}
@@ -5679,6 +5708,12 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Review                   = {A simulation software for birth death process.},
   Timestamp                = {2009.07.24},
   Url                      = {http://bioinformatics.oxfordjournals.org/cgi/content/abstract/12/6/469}
+}
+
+@misc{Rambaut2009,
+  title={Tracer},
+  author={Rambaut, Andrew and Drummond, AJ},
+  year={2009}
 }
 
 @Article{Randle2010,
