--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
@@ -29,8 +29,8 @@ In the \cl{data} folder, you will find the following files
 \cl{primates\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
 %\item
 %\cl{primates\_16s.nex}: Alignment of the \textit{16s ribosomal RNA} gene from the same 23 primates species.
-\item
-\cl{primates\_cox2.nex}: Alignment of the \textit{COX-2} gene from the same 23 primates species.
+%\item
+%\cl{primates\_cox2.nex}: Alignment of the \textit{COX-2} gene from the same 23 primates species.
 \end{itemize}
 
 
@@ -275,39 +275,39 @@ Any other model ($M_9$) & \hspace{3mm} & \TextField[name=gene1_m91,backgroundcol
 \end{Form}
 
 
-\begin{Form}
-\begin{table}[h]
-\centering
-\caption{\small Estimated marginal likelihoods for different substitution models of the cox2 gene$^*$.}
-\begin{tabular}{l c c c c}
-\hline
-\multicolumn{1}{l}{\textbf{ }} &\multicolumn{1}{r}{\textbf{ }} & \multicolumn{3}{c}{\textbf{Marginal lnL estimates}} \\ 
-\cline{3-5}
-\multicolumn{1}{l}{\textbf{Substitution Model}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textit{Stepping-stone}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textit{Path sampling}} \\ 
-\hline
-JC ($M_1$) & \hspace{15mm} & \TextField[name=gene2_m11,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \hspace{15mm} & \TextField[name=gene2_m12,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-HKY ($M_2$) & \hspace{3mm} &\TextField[name=gene2_m21,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}   & \hspace{3mm} & \TextField[name=gene2_m22,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-GTR ($M_3$) & \hspace{3mm} &\TextField[name=gene2_m31,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}   & \hspace{3mm} & \TextField[name=gene2_m32,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-GTR+$\Gamma$ ($M_4$) & \hspace{3mm} & \TextField[name=gene2_m41,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m42,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-GTR+I ($M_5$) & \hspace{3mm} & \TextField[name=gene2_m51,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m52,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-GTR+$\Gamma$+I ($M_6$) & \hspace{3mm} & \TextField[name=gene2_m61,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m62,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-Any other model ($M_7$) & \hspace{3mm} & \TextField[name=gene2_m71,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m72,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-Any other model ($M_8$) & \hspace{3mm} & \TextField[name=gene2_m81,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m82,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-Any other model ($M_9$) & \hspace{3mm} & \TextField[name=gene2_m91,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m92,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-{\footnotesize{$^*$you can edit this table}}\\
-\end{tabular}
-\label{tab:ml_cox2}
-\end{table}
-\end{Form}
+%\begin{Form}
+%\begin{table}[h]
+%\centering
+%\caption{\small Estimated marginal likelihoods for different substitution models of the cox2 gene$^*$.}
+%\begin{tabular}{l c c c c}
+%\hline
+%\multicolumn{1}{l}{\textbf{ }} &\multicolumn{1}{r}{\textbf{ }} & \multicolumn{3}{c}{\textbf{Marginal lnL estimates}} \\ 
+%\cline{3-5}
+%\multicolumn{1}{l}{\textbf{Substitution Model}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textit{Stepping-stone}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textit{Path sampling}} \\ 
+%\hline
+%JC ($M_1$) & \hspace{15mm} & \TextField[name=gene2_m11,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \hspace{15mm} & \TextField[name=gene2_m12,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%HKY ($M_2$) & \hspace{3mm} &\TextField[name=gene2_m21,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}   & \hspace{3mm} & \TextField[name=gene2_m22,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%GTR ($M_3$) & \hspace{3mm} &\TextField[name=gene2_m31,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}   & \hspace{3mm} & \TextField[name=gene2_m32,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%GTR+$\Gamma$ ($M_4$) & \hspace{3mm} & \TextField[name=gene2_m41,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m42,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%GTR+I ($M_5$) & \hspace{3mm} & \TextField[name=gene2_m51,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m52,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%GTR+$\Gamma$+I ($M_6$) & \hspace{3mm} & \TextField[name=gene2_m61,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m62,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%Any other model ($M_7$) & \hspace{3mm} & \TextField[name=gene2_m71,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m72,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%Any other model ($M_8$) & \hspace{3mm} & \TextField[name=gene2_m81,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m82,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%Any other model ($M_9$) & \hspace{3mm} & \TextField[name=gene2_m91,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m92,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+%\hline
+%{\footnotesize{$^*$you can edit this table}}\\
+%\end{tabular}
+%\label{tab:ml_cox2}
+%\end{table}
+%\end{Form}
 
 
 
