--- a/tutorial_TeX/RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content.tex
+++ b/tutorial_TeX/RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content.tex
@@ -450,7 +450,7 @@ moves[mi++] = mvSimplexElementScale(sf, alpha=10.0, tune=true, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-And instantiate the phyoCTMC.
+And instantiate the phyloCTMC.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 phySeq ~ dnPhyloCTMC(tree=timetree, Q=Q, branchRates=abs_clock_rt, nSites=n_sites, type="DNA")
