--- a/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial_content.tex
@@ -664,7 +664,7 @@ moves[mi++] = mvSlide(alpha)
 moves[mi++] = mvSlide(beta)
 \end{lstlisting}
 \end{snugshade*}}
-Then we set op the model.
+Then we set up the model.
 This means we create a stochastic variable for each observation and clamp its value with the observed data.
 {\tt \begin{snugshade*}
 \begin{lstlisting} 
